# statistical-learning

./: Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.bcp  requirements.dev.txt  requirements.txt
islp/: README.md  ancillar.py  chapter02.ipynb  chapter04.ipynb  chapter06.ipynb  chapter07.ipynb  chapter2_statistical_learning.ipynb  chapter3_linear_regression.ipynb  chapter4_classification.ipynb
islp/data/: README.md
mlflow/: README.md  database.db  lightning_template.py  pytorch_template.py  pytorch_template2.py  pytorch_template3.py  pytorch_template4.py  pytorch_template5.py  pytorch_template6.py  pytorch_template7.py  sklearn_template.py  sklearn_template2.py
mlflow/mlruns/1/models/m-1fbbaacde3594bb7ab1b238b82adcc9a/artifacts/: MLmodel
mlflow/mlruns/10/models/m-e0b9b4f0cfc64732a6f7e18a1bd854ce/artifacts/: MLmodel
mlflow/mlruns/3/models/m-4717299f100e49b3b7c5ae05e172de05/artifacts/: MLmodel
mlflow/mlruns/4/models/m-823b3b7e9b4643208e89327c1864340d/artifacts/: MLmodel  input_example.json  serving_input_example.json
mlflow/mlruns/5/models/m-0180b291b7624be69d9a4b1f7099e6d2/artifacts/: MLmodel  input_example.json  serving_input_example.json
mlflow/mlruns/5/models/m-16e80f4e5a194bb188923963130316f3/artifacts/: MLmodel
mlflow/mlruns/5/models/m-1829eaea013a41ce87a00b5b7772fc1f/artifacts/: MLmodel
technical_assessments/: Makefile  README.md  challenge1.html  challenge1.ipynb  challenge2.html  challenge2.ipynb  challenge2.tex  challenge2_further_tests.html  challenge2_further_tests.ipynb  challenge2_join_images.sh  challenge3.html  challenge3.ipynb
(+29 files in other folders)
